# Anchor-OS

./: ADDITIONAL-DOCS.md  Bsd-vs-Anchor.md  Compare-chart.md  HAND-OFF.md  README.md  TL-DR.md  TL;DR.md  VISUAL-FLOW.md
Docs/: BASE-LAYER.md  BAY-0.md  NIX.md
Docs/bay0/: Cargo.toml
Docs/bay0/src/: room.rs
File-Tree/: FILE-TREE-Update-1.md  FILE-TREE-Update2.md
Tables/Layout/: 0.0.1-Why-it-is-buildable.md  0.0.2-Invariant-list-Anchors.md  0.0.3-Negative-anchors  0.0.4-Positive-Anchors.md  0.0.5-Anchor-OS-Blast-Chamber-Table.md  0.1-ANCHOR-OS-vs-LINUX.md  0.2-RUN-HOST-TABLE.md  0.3-SECURITY-IN-OPERATION-table.md  0.4-  0.5  0.6-PLAY-SMASH-DESTROY-table.md  0.7-TIME-to-REGRET-table.md  0.8-FORKING-table.md  0.9-Known-Issues-Barriers-table.md  1-Invarants-Table.md  1-to-5- Table-Recap.md  1-to-5.C-Red-Team-Updates.md  10-No-OR-you-Break-It-Table.md  2-Capability-Freeze-Rules.md  3-Passport-Schema-Table.md  4-Capability-to-Indicator-Mapping-Table.md  5.B-Exhaustive-Recap.md  5.C-Canonical-Constitution.md  5.E-Fixes-1-to-5.C-Red-Team-Updates.md  6-Data-Flow-Tabke  7-Staorage-Persistence-Table.md  8-  9-Performance-Budget-Table.md  9.11  Capability-Lifecycle-Table.md
Tables/Layout/Pieces/: Nix-why-how.md
Tables/Layout/Pieces/Room/: Airlock.md  Communication-Pipes-Rooms.md  Main-Rooms-Types.md
Tables/Layout/Stage-2-additions/: 6-Data-Flow-Tabke
Tables/User/: Basic-use-table.md  Boot-load-steps.md
bay0/src/: Update-room.rs  control.rs
